revisit cpu cache post

--- a/blog/_posts/2020-04-24-cpu-cache.md
+++ b/blog/_posts/2020-04-24-cpu-cache.md
@@ -25,7 +25,7 @@ There are multiple CPU caches and they perform different functions. It varies de
 
 ### Hierarchy
 
-The CPU cache is divided into multiple levels of cache. The first level, referred to as L1 is the fastest and smallest. The `n`-th level, Ln is the largest and slowest. Typical values of `n` seem to be 3 or 4. In a multi-core CPU, the first levels of cache are exclusive to each cache, while the later levels are shared.
+The CPU cache is divided into multiple levels of cache. The first level, referred to as L1 is the fastest and smallest. The `n`-th level, Ln is the largest and slowest. Typical values of `n` seem to be 3 or 4. In a multi-core CPU, the first levels of cache are exclusive to each CPU, while the later levels are shared.
 
 For a real-world example, Wikipedia [4] describes the architecture for Intel’s Kaby Lake architecture, where L1 is 64KB, L2 is 256KB and L3 is between 2MB to 8MB and shared by the cores.
 
@@ -79,25 +79,42 @@ Some common strategies are either having `m = 1` (direct mapping), `m = 2` (two-
 
 A group of cache lines within the same index is called a **set**.
 
-**Direct-mapping**
-
-Like a hash table with a simple function. Each set has exactly one cache line. If a new entry maps to a row already "occupied", the previous entry is evicted.
+**Direct-mapping.** Like a hash table with a simple function. Each set has exactly one cache line. If a new entry maps to a row already "occupied", the previous entry is evicted.
 
 The advantage of this is simplicity: there’s no criteria we need to use to choose which “cell” of our table to assign it to once we determined its row, since there’s only one. Eviction is easy too.
 
 The downside is that we’re subject of degenerate cases where two hot addresses map to the same index. This will result in the entries being swapped out and many cache misses.
 
-**Two-way set associativity**
-
-In this case, each set has 2 cache lines, so a given memory address can go to any of the two. When deciding which cache line to assign it to, we can use LRU (least recently used).
+**Two-way set associativity.** In this case, each set has 2 cache lines, so a given memory address can go to any of the two. When deciding which cache line to assign it to, we can use LRU (least recently used).
 
 To do so, we need an extra bit to keep track of this information: every time a cache line is read, we set a bit in it to 1 and to 0 in the other. On writes, we can always evict the slot with bit 0.
 
 This is a more complex approach than direct-mapping and we need to use a bit to keep account for the LRU. On the other hand it avoids the degenerate case of a direct-mapping, but suffers the same if there are 3 or more hot addresses.
 
-**m-way associative cache**
+**m-way associative cache.** A more general structure would be `m` cache lines per set. This further shifts the balance between complexity (the higher the `m` the more expensive it is) and avoiding degenerate cases (resilient to up N hot addresses).
 
-A more general structure would be `m` cache lines per set. This further shifts the balance between complexity (the higher the `m` the more expensive it is) and avoiding degenerate cases (resilient to up N hot addresses).
+## Concurrency
+
+When the CPU performs some computation, it might write to its L1 cache before it syncs with the RAM (*write-back caching*). When it does that, it marks the corresponding cache line as dirty by setting a bit, and eventually this data is written back to the RAM.
+
+The picture gets complicated in multi-processor systems. As we discussed before, each CPU has its own L1 cache. However, it's possible that the same region of RAM is in the L1 cache of multiple CPUs.
+
+CPUs cannot leverage read and write locks because they're too expensive at the CPU level. To support sharing cache lines, the CPUs must follow some protocol, such as the MESI protocol. These protocols are called **cache coherence protocols**.
+
+The protocol name stands for the possible states a cache line at each CPU might be in: *Modified*, *Exclusive*, *Shared* and *Invalid* (at any given time the same cache line can have different states for different CPUs).
+
+* Modified: this means this CPU has exclusive access to the cache line and it has local modifications (dirty)
+* Exclusive: this means this CPU has exclusive access to the cache line but it's clean
+* Shared: other CPUs may also have this cache line and it's clean
+* Invalid: this CPU has the cache line but it cannot read or write to it.
+
+The protocol dictates that, for example, if one CPU has a cache line in the "modified" state, then if any other CPU has the same cache line, it must be in the "invalid" state.
+
+If CPU 1 wants to write to a cache line, it must first inform the other CPUs to invalidate their copies (i.e. set them to the "invalid" state). If one of those CPUs has a cache line in the "modified" state, the changes must be flushed to RAM.
+
+If later another CPU 2 needs to write to that cache line, it first needs to tell CPU 1 to flush its modifications and set its state to "invalid". Then CPU 2 has to re-populate its cache line from memory.
+
+This can keep going on back-and-forth, leading to an issue called **cache line bouncing**.
 
 ## Translation Lookaside Buffer
 
