--- a/blog/_posts/2025-07-15-jemalloc.md
+++ b/blog/_posts/2025-07-15-jemalloc.md
@@ -53,7 +53,7 @@ The number of arenas is suggested to be 2-4 time the number of CPU cores. We may
 
 When our program requests `X` amount of memory, the allocator will typically allocate more memory than that (typically the next power of 2). For example, if we ask for 13 bytes of memory, the allocator might give us 16 bytes, 3 bytes of which are wasted. This is known as **internal memory fragmentation**.
 
-You might then ask why not have the allocator return exactly the same amount we ask for and have 0 internal fragmentation. It becomes a problem when it frees that memory later and tries to reuse it. Suppose we have a region of memory of size 48 bytes. We send requests `R1` of 5 bytes, `R2` of 13 bytes and `R3` of 16 bytes to the allocator, that then allocates them contiguously as show in Figure 1:
+You might then ask why not have the allocator return exactly the same amount we ask for and have 0 internal fragmentation. It becomes a problem when it frees that memory later and tries to reuse it. Suppose we have a region of memory of size 16 bytes. We send requests `R1` of 3 bytes and `R2` of 6 bytes to the allocator, that then allocates them contiguously as show in *Figure 1*:
 
 <figure class="center_children">
   <img src="{{resources_path}}/greedy.svg" alt="See caption." width="600" />
@@ -61,14 +61,14 @@ You might then ask why not have the allocator return exactly the same amount we 
 </figure>
 
 
-Now suppose we deallocate `R2` and send a new request `R4` of size 15 bytes. This request cannot be fulfilled. The space left because we can't allocate more blocks is called **external memory fragmentation**. This is hard to quantify precisely because the amount of fragmentation depends on the size of the request. For example, if `R4` was of size 13 bytes or less, we'd be able to fulfill it. But in general it represents wasted space outside the block.
-
-If all blocks had the same size, there would be no external fragmentation. If we set it to 16 bytes in our example, it would have been able to fulfill `R4`, as shown in *Fig 2*.
+Now suppose we deallocate `R1`, freeing 3 bytes and send a new request `R3` of size 8 bytes. This request cannot be fulfilled as shown in *Fig 2*. The space left because we can't allocate more blocks is called **external memory fragmentation**. This is hard to quantify precisely because the amount of fragmentation depends on the size of the request. For example, if `R3` was of size 7 bytes or less, we'd be able to fulfill it. But in general it represents wasted space outside the block.
 
 <figure class="center_children">
   <img src="{{resources_path}}/greedy-realloc.svg" alt="See caption." width="600" />
   <figcaption>Figure 2: Greedy allocation can lead to external fragmentation.</figcaption>
 </figure>
+
+If all blocks had the same size, there would be no external fragmentation. If we set it to 8 bytes in our example, it would have been able to fulfill `R3`.
 
 On the other hand, in practice a fixed-sized block would have to be a big enough to support all sorts of requests, so in most cases it would lead to a lot of *internal* fragmentation if there are a lot of small allocations.
 
