--- a/blog/_posts/2025-07-15-jemalloc.md
+++ b/blog/_posts/2025-07-15-jemalloc.md
@@ -13,13 +13,13 @@ vanity: "2025-07-15-jemalloc"
 </figure>
 
 
-A memory allocator is the algorithm that implements calls such as `malloc()` and `free()`, which allocate and deallocate memory, respectively.
+A memory allocator is an algorithm that implements calls such as `malloc()` and `free()`, which allocate and deallocate memory, respectively.
 
 The standard specifies some constraints on the how these functions behave but not how they're implemented. Hence, custom implementations are often used. In this post we would like to discuss one of them, known as `jemalloc`.
 
 <!--more-->
 
-Note: this contents of post is based on the 2007 paper *A Scalable Concurrent malloc(3) Implementation for FreeBSD* [1] and the implementation is likely very different today, but I'm mostly interested in the high-level ideas.
+Note: the contents of post is based on the 2007 paper *A Scalable Concurrent malloc(3) Implementation for FreeBSD* [1] and the implementation is likely very different today, but I'm mostly interested in the high-level ideas.
 
 ## Motivation
 
@@ -43,7 +43,7 @@ When multiple threads are allocating and deallocating memory, it can lead to con
 
 The idea then is to partition the memory into arenas, and have each thread assigned to one arena, so that threads from different arenas don't compete for the same region of memory. The allocator still needs to make sure the process in thread safe, but with fewer threads competing for the same resource contention is reduced.
 
-Arena is only used for allocations. This means that a thread can only allocate memory in its own arena but it can read and deallocate memory from different arenas.
+Arena is only used for allocations. This means that a thread can only allocate memory in its own arena but it can read and deallocate memory from different arenas. Isn't there contention for deallocation then? Perhaps the assumption is that in most cases the thread that deallocates memory is the same one that performed allocation, so the arena principle should help.
 
 The allocator assigns an arena to a thread the first time it allocates or deallocates memory, in a round-robin fashion. To store the association between thread and arena, it leverages *Thread-Local Storage* or TLS (in which each thread has a dedicated region in memory).
 
