--- a/blog/_posts/2023-04-29-raii.md
+++ b/blog/_posts/2023-04-29-raii.md
@@ -181,7 +181,7 @@ print("ending program")
 
 The code above prints `"destroying"` since `a` falls out of scope in `f()` and we force garbage collection, and then `"ending program"`. Python's garbage collection is based on reference counting [2] so at first sight it looks like it behaves exactly like C++ with `std::shared_ptr`. There are two major differences, however.
 
-**1. Cyclic references.** Reference counting algorithms have trouble with cycles. C++'s stance is that it's up to the user to make sure cycles don't happen or at least that they use weak points (`std::weak_ptr`). Python's GC algorithm on the other hand is able to detect them.
+**1. Cyclic references.** Reference counting algorithms have trouble with cycles. C++'s stance is that it's up to the user to make sure cycles don't happen or at least that they use weak pointers (`std::weak_ptr`). Python's GC algorithm on the other hand is able to detect them.
 
 To be able to handle cycles Python's GC has to keep additional data structures in memory, mainly a doubly-linked list with every container object (i.e. objects that can contain a reference to one or more objects). Determining whether it's safe to delete objects inside cyclic references requires doing a pass on all these objects, which would be prohibitive do to every time some reference count goes to 0, which takes us to our next point.
 
