fix date, content

--- a/blog/_posts/2025-09-10-cpo-in-cpp.md
+++ b/blog/_posts/2025-09-10-cpo-in-cpp.md
@@ -57,16 +57,14 @@ void print(const IShape& s) {
 }
 {% endhighlight %}
 
-
+using it:
 
 {% highlight c++ %}
 Triangle t(10, 4);
 print(t);
 {% endhighlight %}
 
-The problem with this approach is that compilers usually implement dynamic dispatch using [vtables]({{blog}}/2012/08/28/the-visitor-pattern-and-vtables-in-c++.html), which adds overhead to runtime.
-
-The use of inheritance might also be problematic if existing code is not using classes, so some wrapping might be needed.
+The problem with this approach is that compilers usually implement dynamic dispatch using [vtables]({{blog}}/2012/08/28/the-visitor-pattern-and-vtables-in-c++.html), which adds overhead to runtime. The use of inheritance might also be problematic if existing code is not using classes, so some wrapping might be needed.
 
 ### Template + Method
 
@@ -93,16 +91,9 @@ void print(T& obj) {
 }
 {% endhighlight %}
 
-This somewhat the mechanism STL uses for `std::ostringstream`. It expects the operator `<<` to be implemented by the class when we do:
-
-{% highlight c++ %}
-std::ostringstream oss;
-oss << my_object;
-{% endhighlight %}
-
 In this approach we avoid the runtime cost of the dynamic dispatch (moving the cost to compile time), but still require the use of classes.
 
-### Template + Template Specialization
+### Template Specialization
 
 We can declare `getArea()` to be a templated function and require custom types to provide their own implementation.
 
@@ -126,11 +117,9 @@ double getArea(const Triangle& t) {
 
 and this takes precedence over the template specialization.
 
-## Argument-Dependent Lookup
+### Argument-Dependent Lookup
 
-Argument-Dependent Lookup, or ADL, is a more powerful technique than the approaches we considered so far, so we'll cover it in more details.
-
-The ADL relies on a complex set of rules the compiler uses to decide overload function to call based on the types and namespaces of the arguments. Continuing with the example, `getArea()` can be function that can be overloaded by specific types:
+Argument-Dependent Lookup, or ADL relies on a complex set of rules the compiler uses to decide overload function to call based on the types and namespaces of the arguments. Continuing with the example, `getArea()` can be function that can be overloaded by specific types:
 
 {% highlight c++ %}
 double getArea(const Triangle& t) {
@@ -175,7 +164,7 @@ namespace std {
 }
 {% endhighlight %}
 
-Turns out this is undefined behavior and highly discouraged, especially after C++20. The alternative is to define the function in your own namespace:
+Turns out this is undefined behavior and highly discouraged, especially after C++20. The alternative is to define the function in your own namespace then calling `swap()` unqualified and rely on ADL to choose the desired overload:
 
 {% highlight c++ %}
 namespace geometry {
@@ -199,7 +188,7 @@ int main () {
 
 {% endhighlight %}
 
-The `using std::swap` is needed in case you call `swap()` with types other than `Triangle`. The key here is that ADL can call `geometry::swap()` even without qualifiers because the argument is from that namespace.
+The `using std::swap` becomes a fallback in case you call `swap()` with types other than `Triangle`. The key here is that ADL can call `geometry::swap()` even without qualifiers because the argument is from that namespace.
 
 This can lead to ambiguity if the overload is defined in multiple namespaces and the arguments are from different namespaces. A super contrived example:
 
@@ -313,21 +302,20 @@ struct getAreaFunctor {
 
 It requires using the concept `tag_invocable` because otherwise both `operator()` overloads would match and the compilation would fail due to ambiguity.
 
-To summarize, the advantages of CPOs:
+To summarize, the advantages of CPO are:
 
-* Doesn't rely on vtables as the dynamic dispatch approach
-* Doesn't require a class, like the template + method approach
-* Doesn't have the issue of accidental overload by a non-templated implementation of the template specialization approach
+* It doesn't rely on vtables as the dynamic dispatch approach
+* It doesn't require a class, like the template + method approach
+* It doesn't have the issue of accidental overload by a non-templated implementation of the template specialization approach
 * The resolution is explicit in code, compared to the ADL approach
 
 ## Conclusion
 
 In this post we covered different alternatives with different tradeoffs. I learned about ADL, CPO and a few syntaxes around templates and type inference such as
-`noexcept(noexcept(<expr>))`.
+`noexcept(noexcept(<expr>))`. There are a lot of nuances around ADL which I learned from [4].
 
-I still don't have a sense on why one alternative is prefered over others, except for the overhead of dynamic dispatch and class requirements. For example, is template specialization much worse than CPO?
+I still don't have a sense on why some alternatives are prefered over others, for example, is template specialization much worse than CPO?
 
-There are a lot of nuances around ADL which I learned from [4].
 
 ## Related Posts
 
