paper reading: to [paper]

--- a/blog/_posts/2020-10-09-lara.md
+++ b/blog/_posts/2020-10-09-lara.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Paper Reading - Latent Aspect Rating Analysis on Review Text Data"
+title: "[Paper] Latent Aspect Rating Analysis on Review Text Data"
 description: "Notes on the paper Latent Aspect Rating Analysis on Review Text Data"
 tags: [artificial intelligence, numerical optimization, paper reading]
 vanity: "2020-10-01-lara-theory"
