--- a/blog/_posts/2021-08-04-ray.md
+++ b/blog/_posts/2021-08-04-ray.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Paper Reading - Ray"
+title: "[Paper] Ray"
 tags: [ distributed systems, paper reading]
 vanity: "2021-08-04-ray"
 excerpt_separator: <!--more-->
