--- a/blog/_posts/2022-06-17-rdd.md
+++ b/blog/_posts/2022-06-17-rdd.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Paper Reading - Resilient Distributed Datasets"
+title: "[Paper] Resilient Distributed Datasets"
 tags: [ distributed systems, scala, paper reading]
 vanity: "2022-06-17-rdd"
 excerpt_separator: <!--more-->
@@ -151,4 +151,4 @@ I also found RDDs similar to FlumeJava in many aspects. The major gains enabled 
 ## References
 
 * [[1](https://www.usenix.org/system/files/conference/nsdi12/nsdi12-final138.pdf)] Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing - Zaharia et al.
-* [[2]({{blog}}/2022/05/18/flumejava.html)] NP-Incompleteness: Paper Reading - FlumeJava
+* [[2]({{blog}}/2022/05/18/flumejava.html)] NP-Incompleteness: [Paper] FlumeJava
