--- a/blog/_posts/2022-09-27-photon.md
+++ b/blog/_posts/2022-09-27-photon.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Paper Reading - Photon"
+title: "[Paper] Photon"
 tags: [distributed systems, paper reading]
 excerpt_separator: <!--more-->
 vanity: "2022-09-27-photon"
@@ -181,7 +181,7 @@ I found interesting that Photo has two workers working on the *exact* same shard
 * [Review: Streaming Systems]({{blog}}/2022/07/26/review-streaming-systems.html) - Chapter 9 talks about streaming joins more generally in less detail.
 * [Consistent Hashing]({{blog}}/2019/04/12/consistent-hashing.html) - discusses consistent hashing which is utilized by Photon.
 * [The Paxos Protocol]({{blog}}/2014/04/14/the-paxos-protocol.html) - discusses the Paxos prototol which Photon utilizes indirectly via PaxosDB.
-* [Paper Reading - Spanner]({{blog}}/2017/04/27/paper-reading-spanner-google's-globally-distributed-database.html) - discusses the `TrueTime` API which is leveraged by Photon to bound clock drift across the hosts.
+* [[Paper] Spanner]({{blog}}/2017/04/27/paper-reading-spanner-google's-globally-distributed-database.html) - discusses the `TrueTime` API which is leveraged by Photon to bound clock drift across the hosts.
 
 ## References
 
