--- a/blog/_posts/2022-01-01-2021-in-review.md
+++ b/blog/_posts/2022-01-01-2021-in-review.md
@@ -35,7 +35,7 @@ I got excited about programming challenges again, especially during the beginnin
 At work, I had the opportunity to work with process jailing, so I took some time to understand the space a bit: [Linux Filesystems Overview]({{blog}}/2021/02/08/linux-filesystems-overview.html), [Chroot Jailing]({{blog}}/2021/04/19/chroot-jail.html), [Namespace Jailing]({{blog}}/2021/07/02/namespace-jail.html). I also worked more with Python and wrote [Revisiting Python: Modules]({{blog}}/2021/12/24/revisiting-python-modules.html) to improve my knowledge in it.
 
 
-Other miscellaneous posts included [Paper Reading - Ray]({{blog}}/2021/08/04/ray.html) and [T-Digest in Python]({{blog}}/2021/11/29/t-digest.html).
+Other miscellaneous posts included [[Paper] Ray]({{blog}}/2021/08/04/ray.html) and [T-Digest in Python]({{blog}}/2021/11/29/t-digest.html).
 
 Finally I improved the process of managing posts during the draft phase, documented in [Writing Posts]({{blog}}/2021/09/01/writing-posts.html).
 
