review: to [book]

--- a/blog/_posts/2021-01-01-2020-in-review.md
+++ b/blog/_posts/2021-01-01-2020-in-review.md
@@ -17,7 +17,7 @@ This year I set out to learn about **Quantum Computing**. My aim was to understa
 
 I'm satisfied with the learning progress and glad to finally have a better understanding of Shor's algorithm, even though I procrastinated until the second half of the year to start my studies. I liked the approach of having a specific goal in mind, "Understand Shor's algorithm", as opposed to the more vague "Learn Quantum Computing", since it allows focusing and it's clearer when I can stop.
 
-I wrote about some topics relevant to work including [Python Coroutines]({{site.url}}/blog/2020/02/02/python-coroutines.html), [Sockets]({{site.url}}/blog/2020/03/07/sockets.html), [Browser Performance]({{site.url}}/blog/2020/03/28/browser-performance.html), [Observable]({{site.url}}/blog/2020/01/04/observable.html) and [Review: Working Effectively With Legacy Code]({{site.url}}/blog/2020/05/22/review-working-effectively-with-legacy-code.html).
+I wrote about some topics relevant to work including [Python Coroutines]({{site.url}}/blog/2020/02/02/python-coroutines.html), [Sockets]({{site.url}}/blog/2020/03/07/sockets.html), [Browser Performance]({{site.url}}/blog/2020/03/28/browser-performance.html), [Observable]({{site.url}}/blog/2020/01/04/observable.html) and [[Book] Working Effectively With Legacy Code]({{site.url}}/blog/2020/05/22/review-working-effectively-with-legacy-code.html).
 
 I dedicated some time to learn about system development including [Memory Allocation]({{site.url}}/blog/2020/07/31/buddy-memory-allocation.html) and [CPU Cache]({{site.url}}/blog/2020/04/24/cpu-cache.html).
 
