--- a/blog/_posts/2023-04-29-raii.md
+++ b/blog/_posts/2023-04-29-raii.md
@@ -235,7 +235,7 @@ In this post we also got more insights on why RAII works in C++ but not in Pytho
 
 ## Related Posts
 
-[Review: Designing Data Intensive Applications]({{blog}}/2022/05/03/review-designing-data-intensive-applications.html) - The book *Designing Data Intensive Applications* describes *eventual consistency* and *strong consistency*. This reminds me a lot the behavior difference between C++ destructors and Python finalizers.
+[[Book] Designing Data Intensive Applications]({{blog}}/2022/05/03/review-designing-data-intensive-applications.html) - The book *Designing Data Intensive Applications* describes *eventual consistency* and *strong consistency*. This reminds me a lot the behavior difference between C++ destructors and Python finalizers.
 
 If we imagine that "unreacheable objects get destroyed" is a consistent state, then C++ destructors provides strong consistency and Python finalizers eventual consistency.
 
