--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -22,7 +22,7 @@ This is a meta-post to review what happened in 2023. Every year I go over the po
 
 ### C++
 
-I read the book *Effective C++* by Scott Meyers and didn't find it as useful as his *Effective Modern C++*. I documented my notes in [Review: Effective C++](https://www.kuniga.me/blog/2023/02/15/review-effective-cpp.html).
+I read the book *Effective C++* by Scott Meyers and didn't find it as useful as his *Effective Modern C++*. I documented my notes in [[Book] Effective C++](https://www.kuniga.me/blog/2023/02/15/review-effective-cpp.html).
 
 I explored some features from C++, including [RAII](https://www.kuniga.me/blog/2023/04/29/raii.html), [Function Objects](https://www.kuniga.me/blog/2023/06/01/functions-in-cpp.html), [Futures](https://www.kuniga.me/blog/2023/06/08/futures-in-cpp.html) and [Big floats](https://www.kuniga.me/blog/2023/07/24/big-floats.html) (not specific to C++, but related and I used C++ for the code).
 
