--- a/blog/_posts/2025-09-10-cpo-in-cpp.md
+++ b/blog/_posts/2025-09-10-cpo-in-cpp.md
@@ -341,6 +341,6 @@ This however solves a different problem, because here the library implementation
 ## References
 
 * [1] ChatGPT
-* [[2]({{blog}}/2023/02/15/review-effective-cpp.html)] NP-Incompleteness - Review: Effective C++
-* [[3]({{blog}}/2022/10/25/review-effective-modern-cpp.html)] NP-Incompleteness - Review: Effective Modern C++
+* [[2]({{blog}}/2023/02/15/review-effective-cpp.html)] NP-Incompleteness - [Book] Effective C++
+* [[3]({{blog}}/2022/10/25/review-effective-modern-cpp.html)] NP-Incompleteness - [Book] Effective Modern C++
 * [[4](https://quuxplusone.github.io/blog/2019/04/26/what-is-adl/)] What is ADL? - Arthur O'Dwyer
