--- a/blog/_posts/2022-09-27-photon.md
+++ b/blog/_posts/2022-09-27-photon.md
@@ -178,7 +178,7 @@ I found interesting that Photo has two workers working on the *exact* same shard
 
 ## Related Posts
 
-* [Review: Streaming Systems]({{blog}}/2022/07/26/review-streaming-systems.html) - Chapter 9 talks about streaming joins more generally in less detail.
+* [[Book] Streaming Systems]({{blog}}/2022/07/26/review-streaming-systems.html) - Chapter 9 talks about streaming joins more generally in less detail.
 * [Consistent Hashing]({{blog}}/2019/04/12/consistent-hashing.html) - discusses consistent hashing which is utilized by Photon.
 * [The Paxos Protocol]({{blog}}/2014/04/14/the-paxos-protocol.html) - discusses the Paxos prototol which Photon utilizes indirectly via PaxosDB.
 * [[Paper] Spanner]({{blog}}/2017/04/27/paper-reading-spanner-google's-globally-distributed-database.html) - discusses the `TrueTime` API which is leveraged by Photon to bound clock drift across the hosts.
