fix typos in posts up to 2013-04-18 using claude

--- a/blog/_posts/2010-01-01-2009-in-review.md
+++ b/blog/_posts/2010-01-01-2009-in-review.md
@@ -34,7 +34,7 @@ Given that, I didn't have enough confidence to knock on some TCS professor and a
 
 I sent an email, got accepted and decided to get started in Combinatorial Optimization. Funny thing is that before starting, prof. Lee asked me if I wanted to study other topics from other advisors. As I really liked the Computational Geometry from programming contests, I was in doubt whether to speak with prof. Pedro Rezende. I then found out that he was on a postdoc work in Canada, so I ended up not talking to anyone else.
 
-My interest in Computational Geometry has not diminished, so much so that the first subject I took as a special student was this one, as soon as prof. Rezende returned from his posdoc. I really enjoyed the course and I was almost certain that if I was going to do a master's degree, I would do it in Computational Geometry.
+My interest in Computational Geometry has not diminished, so much so that the first subject I took as a special student was this one, as soon as prof. Rezende returned from his postdoc. I really enjoyed the course and I was almost certain that if I was going to do a master's degree, I would do it in Computational Geometry.
 
 It was then that, at the beginning of the fifth year, I decided to reach out to professor Rezende and ask to be mentored in the Masters program. He introduced me to a very interesting project that involved Combinatorial Optimization *and* Computational Geometry, and since I could apply things developed during undergraduate research and work in my favorite subfield of theory, I accepted the project. He suggested that I attended the Integer Linear Programming course with professor Cid, who ended up becoming my co-advisor, and was responsible for the combinatorial optimization part of the project.
 
