--- a/blog/_posts/2010-02-23-hypar.md
+++ b/blog/_posts/2010-02-23-hypar.md
@@ -30,7 +30,7 @@ Demaine found out that it is possible to construct such a shape, which he calls 
 
 ## k-hat
 
-By putting together several hypars, it is possible to form what Erik calls a $k$-hat. To do this, we must glue the sides of $k$ hipars so that the tallest end is in the center. Figure 3 shows a 4-hat:
+By putting together several hypars, it is possible to form what Erik calls a $k$-hat. To do this, we must glue the sides of $k$ hypars so that the tallest end is in the center. Figure 3 shows a 4-hat:
 
 <figure class="center_children">
     <img src="{{resources_path}}/4-hat.jpeg" alt="see caption"/>
