--- a/blog/_posts/2011-08-07-haskell.md
+++ b/blog/_posts/2011-08-07-haskell.md
@@ -24,7 +24,7 @@ I also wanted to remember some concepts from functional languages, which I learn
 </figure>
 
 
-I am studying the book Real World Haskell [1], available for [online for free](http://book.realworldhaskell.org). I liked their idea of providing space for comments in each paragraph of the book. Thus, readers act as proofreaders suggesting better examples or correcting typos.
+I am studying the book Real World Haskell [1], available [online for free](http://book.realworldhaskell.org). I liked their idea of providing space for comments in each paragraph of the book. Thus, readers act as proofreaders suggesting better examples or correcting typos.
 
 Being the first in a series of notes from my studies of this language, this post will be like an introduction. In the following posts I intend to discuss the most important aspects of language.
 
@@ -32,7 +32,7 @@ Being the first in a series of notes from my studies of this language, this post
 
 ## Setup
 
-To start, you need to install the Haskell interpreter. I'm using `ghci` to run the programs below. To do so, run `ghci` in the terminal and load the sources with `:load <filename>`. Sample codes can be saved with theextension `.hs`.
+To start, you need to install the Haskell interpreter. I'm using `ghci` to run the programs below. To do so, run `ghci` in the terminal and load the sources with `:load <filename>`. Sample codes can be saved with the extension `.hs`.
 
 ## Hello World!
 
