--- a/blog/_posts/2012-09-09-functors.md
+++ b/blog/_posts/2012-09-09-functors.md
@@ -16,7 +16,7 @@ You're probably acquainted with maps. Nevertheless, let's see an example in Hask
 
 `map (+1) [1,2,3]`
 
-A map receives a function that transform an element of type `a` in a element in `a` type `b` and a list of elements of type `a`. We can see this by checking the its type on ghci:
+A map receives a function that transforms an element of type `a` into an element of type `b` and a list of elements of type `a`. We can see this by checking the its type on ghci:
 
 {% highlight haskell %}
 
