auto-fix more typos

--- a/blog/_posts/2014-01-01-2013-in-review.md
+++ b/blog/_posts/2014-01-01-2013-in-review.md
@@ -28,7 +28,7 @@ I've traveled to Philadelphia and New York City. In MoMa in NYC I was able to se
     <figcaption>Erik Demaine's Art</figcaption>
 </figure>
 
-I've also attended the [Maker Faire](https://makerfaire.com/) in San Mateo, where a bunch of makers get together to expose and sell their work. One of my favorite stands was this geometric sculptures (unfortunately they're were a bit pricey for me). I've first seen similar sculptures as the prizes from [Al Zimmermann's Programming ContestsRegister](http://azspcs.com/).
+I've also attended the [Maker Faire](https://makerfaire.com/) in San Mateo, where a bunch of makers get together to expose and sell their work. One of my favorite stands was this geometric sculptures (unfortunately they're were a bit pricey for me). I've first seen similar sculptures as the prizes from [Al Zimmermann's Programming Contests](http://azspcs.com/).
 
 <figure class="center_children">
     <img src="{{resources_path}}/maker-faire.jpg" alt="see caption"/>
