--- a/blog/_posts/2019-01-01-2018-in-review.md
+++ b/blog/_posts/2019-01-01-2018-in-review.md
@@ -93,7 +93,7 @@ This year I read a lot of non-fiction, especially science-related. My favorites 
     </tr>
 
     <tr>
-      <td><b>Genome: The Autobiography of a Species in 23 Chapters</b> by Matt Ridley. It's a highly engaging and elucidating tour of our genome. Each chapter is dedicated to one chromosome and he provides an example of trait or disease related to it..</td>
+      <td><b>Genome: The Autobiography of a Species in 23 Chapters</b> by Matt Ridley. It's a highly engaging and elucidating tour of our genome. Each chapter is dedicated to one chromosome and he provides an example of trait or disease related to it.</td>
       <td><img src="{{resources_path}}/genome.jpg" alt="Book cover for title on the column to the left."/></td>
     </tr>
 
