--- a/blog/_posts/2024-01-01-2023-in-review.md
+++ b/blog/_posts/2024-01-01-2023-in-review.md
@@ -8,7 +8,7 @@ vanity: "2024-01-01-2023-in-review"
 {% include blog_vars.html %}
 
 <figure class="image_float_left">
-  <img src="{{resources_path}}/thumbnail.png" alt="Prompt used to generate this: an illustration for a post card with the brackground of China and New Zealand during New Year's eve." />
+  <img src="{{resources_path}}/thumbnail.png" alt="Prompt used to generate this: an illustration for a post card with the background of China and New Zealand during New Year's eve." />
 </figure>
 
 This is a meta-post to review what happened in 2023. Every year I go over the posts I wrote, reflect on the blog as a whole and on the personal side, share things I've done (mostly trips and books read).
